--- a/ApiRepaso/style/style.css
+++ b/ApiRepaso/style/style.css
@@ -1,10 +1,4 @@
 /* Importaccion de la fuente */
-
-body{
-    background: linear-gradient( skyblue, white);
-    background-repeat: no-repeat;
-}
-
 @import url('https://fonts.googleapis.com/css2?family=Oxanium:wght@300;400;500;600;700;800&display=swap&#39');
 
 * {
@@ -13,6 +7,12 @@ body{
     box-sizing: border-box;
     font-family: 'Oxanium', cursive;
     text-transform: capitalize;
+    font-weight: 600  
+}
+
+body{
+    background: linear-gradient( skyblue, white);
+    background-repeat: no-repeat;
 }
 
 .fondo__img{
@@ -40,26 +40,23 @@ body{
     color: grey;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    font-size: 4vw;
+    font-size: 2.5vw;
     text-align: right;
-    top: 16vw;
+    top: 17.3vw;
     width: 15vw;
     left: -2vw;
 }
 
 .foto{
-    position: relative;
+    position: absolute;
     width: 30%;
     top: 5vw;
     left: 35%;
-    box-sizing: border-box;
 }
 .name{
     position: absolute;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
     font-size: 2vw;
     text-align: rigth;
     top: 17.5vw;
@@ -67,7 +64,7 @@ body{
 }
 #fondo__formBusqueda--formtext{
     position: absolute;
-    font-size: 2vw;
+    font-size: 1.5vw;
     top: 36vw;
     left: 40vw;
     height: 4vw;
@@ -77,7 +74,8 @@ body{
     border-bottom-left-radius: 0.5vw;
     border-bottom-right-radius: 0.5vw;
     border: 0.1vw solid black ;
-    color: black;
+    padding: 2%;
+    font-weight: 500  
 }
 .fondo__formBusqueda--borde{
     position: absolute;
@@ -92,3 +90,4 @@ body{
     border: 0.1vw solid black ;
     background-color: gray;
 }
+.
