--- a/ApiBaraja/style/style.css
+++ b/ApiBaraja/style/style.css
@@ -1,7 +1,75 @@
-
-
 body{
-    background-image:  url("../img/pañoVerde.jpg");
+    background-image:  url("../img/casino.avif");
     background-repeat: no-repeat;
     background-size: 100%;
 }
+
+.ayuda{
+    position: absolute;
+    top: 2vw;
+    width: 5%;
+    left: 4%;
+}
+.ayuda:hover{
+    -webkit-transform:scale(1.3);transform:scale(1.3);
+}
+
+.logo{
+    position: absolute;
+    width: 40%;
+    left: 28%;
+    top: 4vw;
+}
+.JuegoPoker__ParteEstetica--text{
+    position: absolute;
+    top: 4vw;
+    left: 4.5%;
+    font-size: 1.5vw;
+    color: white;
+    text-decoration: none;
+    animation: pulse 1.5s infinite;
+}
+.logo:hover {
+  animation: rotate3d 0.7s;
+}
+
+@keyframes rotate3d {
+  0% {
+    transform: rotateX(0deg);
+  }
+  50% {
+    transform: rotateX(180deg);
+  }
+  100% {
+    transform: rotateX(360deg);
+  }
+}
+
+
+.JuegoPoker__boton--comezar{
+    position: absolute;
+    width: 17%;
+    height: 7%;
+    left: 40%;
+    top: 43vw;
+    font-size: 2vw;
+    background-color: rgb(28, 213, 185);
+    border: 0.3vw solid white;
+    border-top-left-radius:  0.5vw;
+    border-top-right-radius: 0.5vw;
+    border-bottom-left-radius: 0.5vw;
+    border-bottom-right-radius: 0.5vw;
+    animation: pulse 1.5s infinite;
+  }
+  
+  @keyframes pulse {
+    0% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(1.1);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
