--- a/ApiBaraja/style/hi-lo.css
+++ b/ApiBaraja/style/hi-lo.css
@@ -10,12 +10,41 @@ body{
     width: 5%;
     left: 4%;
 }
+.ayuda:hover{
+    -webkit-transform:scale(1.3);transform:scale(1.3);
+}
+.JuegoPoker__ParteEstetica--text{
+    position: absolute;
+    top: 4vw;
+    left: 4.5%;
+    font-size: 1.5vw;
+    color: white;
+    text-decoration: none;
+    animation: pulse 1.5s infinite;
+}
+
+  
+@keyframes pulse {
+    0% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(1.1);
+    }
+    100% {
+      transform: scale(1);
+    }
+}
+
 .logo{
     position: absolute;
     width: 25%;
     left: 37%;
     top: 1%;
     
+}
+.logo:hover {
+    animation: rotate3d 0.7s;
 }
 .JuegoPoker__CasillaPuntos{
     position: absolute;
