--- a/ApiBaraja/style/hi-lo.css
+++ b/ApiBaraja/style/hi-lo.css
@@ -134,7 +134,7 @@ body{
     grid-row-start: 3;
     grid-row-end: 3;
 }
-.JuegoPoker__botones--mas{
+#JuegoPoker__botones--mas{
     position: absolute;
     width: 17%;
     height: 7%;
@@ -151,10 +151,10 @@ body{
     -moz-transition: ease-out 0.4s;
     transition: ease-out 0.4s;
 }
-.JuegoPoker__botones--mas:hover {
+#JuegoPoker__botones--mas:hover {
     box-shadow: inset 0 100px 0 0 white;
   }
-.JuegoPoker__botones--menos{
+#JuegoPoker__botones--menos{
     position: absolute;
     width: 17%;
     height: 7%;
@@ -171,7 +171,7 @@ body{
     -moz-transition: ease-out 0.4s;
     transition: ease-out 0.4s;
 }
-.JuegoPoker__botones--menos:hover {
+#JuegoPoker__botones--menos:hover {
     box-shadow: inset 0 100px 0 0 white;
 }
 .img_Cards{
