--- a/ApiBaraja/style/hi-lo.css
+++ b/ApiBaraja/style/hi-lo.css
@@ -86,6 +86,7 @@ body{
 }
 .JuegoPoker__ParteEstetica--puntos{
     position: absolute;
+    text-align: center;
     font-size: 2vw;
     color: white;
     font-weight: 600;
@@ -195,5 +196,7 @@ body{
     color: white;
     font-weight: 600;
     top: 38vw; 
-    left: 70%;
+    left: 66%;
+    width: 10%;
+    text-align: center;
 }
