--- a/ApiBaraja/style/hi-lo.css
+++ b/ApiBaraja/style/hi-lo.css
@@ -91,9 +91,9 @@ body{
     font-size: 3vw;
     color: white;
     font-weight: 300;
-    top: 45vw;
-    left: 80%;
-    width: 10%;
+    top: 38vw;
+    left: 75%;
+    width: 15%;
     text-align: center;
 }
 .JuegoPoker__CasillaPuntos{
@@ -150,7 +150,7 @@ body{
     width: 17%;
     height: 7%;
     left: 6%;
-    top: 45vw;
+    top: 42vw;
     font-size: 2vw;
     background-color: rgb(28, 213, 185);
     border: 0.3vw solid white;
@@ -161,6 +161,7 @@ body{
     -webkit-transition: ease-out 0.4s;
     -moz-transition: ease-out 0.4s;
     transition: ease-out 0.4s;
+    color: black;
 }
 #JuegoPoker__botones--mas:hover {
     box-shadow: inset 0 100px 0 0 white;
@@ -170,7 +171,7 @@ body{
     width: 17%;
     height: 7%;
     left: 6%;
-    top: 40vw;
+    top: 37vw;
     font-size: 2vw;
     background-color: rgb(28, 213, 185);
     border: 0.3vw solid white;
@@ -181,6 +182,7 @@ body{
     -webkit-transition: ease-out 0.4s;
     -moz-transition: ease-out 0.4s;
     transition: ease-out 0.4s;
+    color: black;
 }
 #JuegoPoker__botones--menos:hover {
     box-shadow: inset 0 100px 0 0 white;
@@ -197,8 +199,8 @@ body{
     font-size: 3vw;
     color: white;
     font-weight: 600;
-    top: 38vw; 
-    left: 80%;
+    top: 30vw; 
+    left: 77%;
     width: 10%;
     text-align: center;
 }
