--- a/Dia12+1/style/style.css
+++ b/Dia12+1/style/style.css
@@ -65,7 +65,7 @@ button{
 }
 .opciones{
     gap: 20px;
-    margin-top: -280px;
+    margin-top: 140px;
     overflow-y: scroll;
     height: calc(84vh - 300px);
     display: flex;
@@ -89,4 +89,21 @@ button{
 }
 .botones{
     display: flex;
+}
+.capsulaTerminado{
+    padding-top: 3px;
+    padding-bottom: 3px;
+    padding-left: 5px;
+    padding-right: 5px;
+    display: flex;
+    color: white;
+    background-color: grey;
+    border-radius: 30px;
+    max-width: 80%;
+}
+.cambioTarea{
+    margin-top: 10px;
+    font-size: 30px;
+    color: rgb(204, 204, 204);
+    text-decoration: line-through;
 }
