--- a/ApiSuperHeroes/style/style2.css
+++ b/ApiSuperHeroes/style/style2.css
@@ -214,6 +214,7 @@ h1{
     border-top-right-radius: 0.5vw;
     border-bottom-left-radius: 0.5vw;
     border-bottom-right-radius: 0.5vw;
+    background-color: white;
 }
 .Botones{
     grid-column-end: 1;
@@ -264,3 +265,20 @@ h1{
     color: white;
     border-color: black;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
