--- a/ApiSuperHeroes/style/style2.css
+++ b/ApiSuperHeroes/style/style2.css
@@ -1,272 +1,7 @@
-@font-face {
-    font-family: 'bold';
-    src: url(../fonds/PT\ Root\ UI_Bold.ttf);
+.fle{
+    display: flex;
+    gap: 1vw;
 }
-@font-face {
-    font-family: 'ligth';
-    src: url(../fonds/PT\ Root\ UI_Light.ttf);
-}
-@font-face {
-    font-family: 'medium';
-    src: url(../fonds/PT\ Root\ UI_Medium.ttf);
-}
-@font-face {
-    font-family: 'regular';
-    src: url(../fonds/PT\ Root\ UI_Regular.ttf);
-}
-
-body{
-    align-items: center;
-}
-p{
-    position: absolute;
-    font-size: 1.6vw;
-    font-family: 'regular';
-    left: 2vw;
-}
-
-h3{
-    font-size: 1.3vw;
-    font-family: 'regular';
-}
-h1{
-    font-size: 1.8vw;
-    font-family: 'regular';
-}
-.caja{
-    position: absolute;
-    top: 1vw;
-    border: 0.2vw solid grey;
-    height: 5vw;
-    width: 75vw;
-    left: 10vw;
-    border-top-left-radius:  1vw;
-    border-top-right-radius: 1vw;
-    background-color: rgb(233, 233, 233);
-}
-.formulario{
-    position: absolute;
-    top: 6.1vw;
-    border: 0.2vw solid grey;
-    height:40vw;
-    width: 71vw;
-    left: 10vw;
-    border-bottom-left-radius: 1vw;
-    border-bottom-right-radius: 1vw;  
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr ;
-    padding: 2vw;
-}
-.gestion{
-    grid-column-end: 3;
-    grid-column-start: 1;
-    grid-row-end: 1;
-    grid-row-start: 1;
-}
-
-.nombre{
-    grid-column-end: 1;
-    grid-column-start: 1;
-    grid-row-end: 2;
-    grid-row-start: 2;
-}
-.nombreActor{
-    grid-column-end: 2;
-    grid-column-start: 2;
-    grid-row-end: 2;
-    grid-row-start: 2;
-}
-.edadActor{
-    grid-column-end: 1;
-    grid-column-start: 1;
-    grid-row-end: 4;
-    grid-row-start: 4;
-}
-.ubicacion{
-    grid-column-end: 2;
-    grid-column-start: 2;
-    grid-row-end: 4;
-    grid-row-start: 4;
-}
-.poster{
-    grid-column-end: 1;
-    grid-column-start: 1;
-    grid-row-end: 6;
-    grid-row-start: 6;
-}
-.fecha{
-    grid-column-end: 2;
-    grid-column-start: 2;
-    grid-row-end: 6;
-    grid-row-start: 6;
-}
-.productora{
-    grid-column-end: 3;
-    grid-column-start: 1;
-    grid-row-end: 8;
-    grid-row-start: 8;
-}
-
-
-
-.nombrei{
-    grid-column-end: 1;
-    grid-column-start: 1;
-    grid-row-end: 3;
-    grid-row-start: 3;
-    font-size: 1.6vw;
-    font-family: 'regular';
-    left: 2vw;
-    width: 30vw;
-    height: 3vw;
-    border-top-left-radius:  0.5vw;
-    border-top-right-radius: 0.5vw;
-    border-bottom-left-radius: 0.5vw;
-    border-bottom-right-radius: 0.5vw;
-}
-.nombreActori{
-    grid-column-end: 2;
-    grid-column-start: 2;
-    grid-row-end: 3;
-    grid-row-start: 3;
-    font-size: 1.6vw;
-    font-family: 'regular';
-    left: 2vw;
-    width: 30vw;
-    height: 3vw;
-    border-top-left-radius:  0.5vw;
-    border-top-right-radius: 0.5vw;
-    border-bottom-left-radius: 0.5vw;
-    border-bottom-right-radius: 0.5vw;
-}
-.edadActori{
-    grid-column-end: 1;
-    grid-column-start: 1;
-    grid-row-end: 5;
-    grid-row-start: 5;
-    font-size: 1.6vw;
-    font-family: 'regular';
-    left: 2vw;
-    width: 30vw;
-    height: 3vw;
-    border-top-left-radius:  0.5vw;
-    border-top-right-radius: 0.5vw;
-    border-bottom-left-radius: 0.5vw;
-    border-bottom-right-radius: 0.5vw;
-}
-.ubicacioni{
-    grid-column-end: 2;
-    grid-column-start: 2;
-    grid-row-end: 5;
-    grid-row-start: 5;
-    font-size: 1.6vw;
-    font-family: 'regular';
-    left: 2vw;
-    width: 30vw;
-    height: 3vw;
-    border-top-left-radius:  0.5vw;
-    border-top-right-radius: 0.5vw;
-    border-bottom-left-radius: 0.5vw;
-    border-bottom-right-radius: 0.5vw;
-}
-.posteri{
-    grid-column-end: 1;
-    grid-column-start: 1;
-    grid-row-end: 7;
-    grid-row-start: 7;
-    font-size: 1.6vw;
-    font-family: 'regular';
-    left: 2vw;
-    width: 30vw;
-    height: 3vw;
-    border-top-left-radius:  0.5vw;
-    border-top-right-radius: 0.5vw;
-    border-bottom-left-radius: 0.5vw;
-    border-bottom-right-radius: 0.5vw;
-}
-.fechai{
-    grid-column-end: 2;
-    grid-column-start: 2;
-    grid-row-end: 7;
-    grid-row-start: 7;
-    font-size: 1.6vw;
-    font-family: 'regular';
-    left: 2vw;
-    width: 30vw;
-    height: 3vw;
-    border-top-left-radius:  0.5vw;
-    border-top-right-radius: 0.5vw;
-    border-bottom-left-radius: 0.5vw;
-    border-bottom-right-radius: 0.5vw;
-}
-.productorai{
-    grid-column-end: 3;
-    grid-column-start: 1;
-    grid-row-end: 9;
-    grid-row-start: 9;
-    font-size: 1.6vw;
-    font-family: 'regular';
-    left: 2vw;
-    width: 66vw;
-    height: 3vw;
-    border-top-left-radius:  0.5vw;
-    border-top-right-radius: 0.5vw;
-    border-bottom-left-radius: 0.5vw;
-    border-bottom-right-radius: 0.5vw;
-    background-color: white;
-}
-.Botones{
-    grid-column-end: 1;
-    grid-column-start: 3;
-    grid-row-end:10;
-    grid-row-start: 10;
-    border-top-left-radius:  0.5vw;
-    border-top-right-radius: 0.5vw;
-    border-bottom-left-radius: 0.5vw;
-    border-bottom-right-radius: 0.5vw;
-}
-#nuevo{
-    height: 3vw;
-    width: 10vw;
-    font-size: 1.3vw;
-    font-family: 'regular';
-    border-top-left-radius:  0.5vw;
-    border-top-right-radius: 0.5vw;
-    border-bottom-left-radius: 0.5vw;
-    border-bottom-right-radius: 0.5vw;
-    background-color: black;
-    color: white;
-    border-color: black;
-}
-#guardar{
-    height: 3vw;
-    width: 10vw;
-    font-size: 1.3vw;
-    font-family: 'regular';
-    border-top-left-radius:  0.5vw;
-    border-top-right-radius: 0.5vw;
-    border-bottom-left-radius: 0.5vw;
-    border-bottom-right-radius: 0.5vw;
-    background-color: rgb(60, 106, 243);
-    color: white;
-    border-color: black;
-}
-#cancelar{
-    height: 3vw;
-    width: 8vw;
-    font-size: 1.3vw;
-    font-family: 'regular';
-    border-top-left-radius:  0.5vw;
-    border-top-right-radius: 0.5vw;
-    border-bottom-left-radius: 0.5vw;
-    border-bottom-right-radius: 0.5vw;
-    background-color: red;
-    color: white;
-    border-color: black;
-}
-
-
 
 
 
