feat :sparkles: new update PacoPets

--- a/ApiRefugio/style/mascotas.css
+++ b/ApiRefugio/style/mascotas.css
@@ -104,3 +104,10 @@
     top: 10%;
     display: flex;
 }
+.simboloMas{
+    width: 2vw;    
+}
+.simboloEstrella{
+    top: 1vw;
+    width: 2vw;
+}
